# sqlitecache

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: pre-commit.yml
final_results/: hit_rate_plot.eps  miss_rate_plot.eps
scripts/: analyze.py
sqlitecache/: cache.py
tests/: conftest.py  pytest.ini  test_cache.py
