[tool.poetry]
name = "sqlitecache"
version = "0.1.0"
description = ""
authors = ["Christofer Berruz Chungata <cberruzc@my.bridgeport.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
attrs = "^25.3.0"
pendulum = "^3.0.0"
pytest-mock = "^3.14.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
pytest = "^8.3.5"
ipython = "^8.0"
pandas = "^2.2.3"
matplotlib = "^3.10.1"
pytest-xdist = {extras = ["psutil"], version = "^3.6.1"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"